--- a/app/src/main/res/layout/activity_post_list.xml
+++ b/app/src/main/res/layout/activity_post_list.xml
@@ -57,7 +57,6 @@
 
     </FrameLayout>
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,7 +73,17 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingRight="@dimen/spacing_normal">
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/add_pic"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_add_white_24dp"
+            android:layout_marginLeft="@dimen/spacing_normal"
+            android:foreground="?selectableItemBackground"
+            app:backgroundTint="?colorAccent"/>
 
         <EditText
             android:id="@+id/text"
@@ -84,7 +93,7 @@
             android:focusable="true"
             android:background="@null"
             android:focusableInTouchMode="true"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/spacing_normal"
             android:paddingRight="@dimen/spacing_normal"
             android:paddingTop="@dimen/padding_normal"
             android:paddingBottom="@dimen/padding_normal"
