--- a/app/src/main/res/menu/menu_new_post.xml
+++ b/app/src/main/res/menu/menu_new_post.xml
@@ -4,13 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:title="@string/action_at"
+        android:id="@+id/at_user"
+        android:icon="@drawable/ic_face_white_24dp"
+        app:showAsAction="always"/>
+
+    <item
         android:title="@string/action_add_pic"
         android:id="@+id/add_pic"
-        app:showAsAction="ifRoom"/>
+        android:icon="@drawable/ic_camera_white_24dp"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/send"
         android:title="@string/action_send"
-        app:showAsAction="ifRoom"/>
+        android:icon="@drawable/ic_done_white_24dp"
+        app:showAsAction="always"/>
 
 </menu>
