--- a/app/src/main/res/layout/item_post_topic_end.xml
+++ b/app/src/main/res/layout/item_post_topic_end.xml
@@ -27,6 +27,28 @@
             android:visibility="gone"/>
 
         <TextView
+            android:id="@+id/edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:background="?selectableItemBackground"
+            android:textColor="@color/colorAccent"
+            android:clickable="true"
+            android:text="编辑"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/rate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:background="?selectableItemBackground"
+            android:textColor="@color/colorAccent"
+            android:clickable="true"
+            android:text="评分"
+            android:visibility="visible"/>
+
+        <TextView
             android:id="@+id/reply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
