--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/material_red_500</color>
     <color name="colorPrimaryDark">@color/material_red_700</color>
-    <color name="colorAccent">@color/material_red_accent_200</color>
+    <color name="colorAccent">@color/material_red_500</color>
 
     <color name="colorTranslucent">#AA323232</color>
 
