--- a/app/src/main/res/layout/activity_post_list.xml
+++ b/app/src/main/res/layout/activity_post_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,10 +9,22 @@
     android:orientation="vertical"
     tools:context="com.yiyuanliu.hepan.activity.PostListActivity">
 
+    <TextView
+        android:id="@+id/text_error"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textAppearance="@style/PostTextAppearance"
+        android:visibility="gone"/>
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay.Light"
+        app:elevation="2dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,93 +34,31 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:id="@+id/text_error"
-            android:padding="@dimen/activity_horizontal_margin"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textAppearance="@style/PostTextAppearance"
-            android:visibility="gone"/>
+            android:paddingBottom="80dp"
+            android:clipToPadding="false" />
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="80dp"
-                android:clipToPadding="false" />
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:background="@drawable/bg_shadow"
-            android:layout_gravity="bottom"/>
-
-    </FrameLayout>
-
-    <TextView
-        android:layout_width="match_parent"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/reply"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/quote"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp"
-        android:gravity="center_vertical"
-        android:drawableLeft="@drawable/ic_close_black_18dp"
-        android:padding="@dimen/spacing_micro"
-        android:visibility="gone"
-        android:minHeight="32dp"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingRight="@dimen/spacing_normal">
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/add_pic"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_add_white_24dp"
-            android:layout_marginLeft="@dimen/spacing_normal"
-            android:foreground="?selectableItemBackground"
-            app:backgroundTint="?colorAccent"/>
-
-        <EditText
-            android:id="@+id/text"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:background="@null"
-            android:focusableInTouchMode="true"
-            android:paddingLeft="@dimen/spacing_normal"
-            android:paddingRight="@dimen/spacing_normal"
-            android:paddingTop="@dimen/padding_normal"
-            android:paddingBottom="@dimen/padding_normal"
-            android:hint="@string/hint_topic_commit"/>
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/send"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_send_black_36dp"
-            android:foreground="?selectableItemBackground"
-            app:backgroundTint="?colorAccent"/>
-    </LinearLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_reply_black_24dp"
+        android:tint="?android:attr/textColorPrimary"
+        app:backgroundTint="@color/colorWhite"
+        app:elevation="2dp"/>
 
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
