--- a/app/src/main/res/layout/dialog_rate.xml
+++ b/app/src/main/res/layout/dialog_rate.xml
@@ -7,19 +7,6 @@
     android:background="@color/colorWhite"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:text="评分"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="@dimen/dialog_min_width"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:transitionName="@string/trans_name_login"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:paddingBottom="@dimen/padding_normal"
-        android:layout_marginStart="@dimen/spacing_micro"/>
-
     <LinearLayout
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
@@ -35,18 +22,17 @@
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/reason"
-        android:minWidth="@dimen/dialog_min_width"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:transitionName="@string/trans_name_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
